--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   "description": "node-red bin packing",
   "homepage": "https://github.com/lvenier/node-red-contrib-binpacking#readme",
   "keywords": [
-    "node-red"
+    "node-red",
+    "binpacking",
+    "logistics"
   ],
   "license": "ISC",
   "main": "index.js",
