remove test failure

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "url": "git+https://github.com/lvenier/node-red-contrib-binpacking.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Audit: no test specified\" && exit 0"
   },
-  "version": "1.0.3"
+  "version": "1.0.4"
 }
