--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lvenier/node-red-contrib-binpacking.git"
+    "url": "https://github.com/lvenier/node-red-contrib-binpacking.git"
   },
   "scripts": {
     "lint": "eslint --ext .js index.js",
