test travis dp2

--- a/.travis.yaml
+++ b/.travis.yaml
@@ -19,5 +19,6 @@ deploy:
   provider: npm
   email: "lav@yoctu.com"
   api_key: "81e3eb5f-350a-4c54-8eac-e07c4fc3eb05"
+  edge: true
   on:
     branch: master
