--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": {
-    "name": "lav@yoctu.com"
+    "name": "lav@yoctu.com",
+    "email": "LaV"
   },
   "bugs": {
     "url": "https://github.com/lvenier/node-red-contrib-binpacking/issues"
@@ -23,6 +24,7 @@
   "keywords": [
     "node-red",
     "binpacking",
+    "yoctu",
     "logistics"
   ],
   "license": "ISC",
