--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "url": "https://github.com/lvenier/node-red-contrib-binpacking/issues"
   },
   "bundleDependencies": false,
-  "dependencies": {
-    "binpackingjs": "*"
-  },
   "devDependencies": {
+    "binpackingjs": "^2.3.3",
     "eslint": "*",
     "eslint-config-standard": "*",
     "eslint-plugin-import": "*",
