--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "lint": "eslint --ext .js index.js",
     "lint-fix": "eslint --fix --ext .js index.js",
     "jest": "jest",
-    "test": "npm run lint && jest",
+    "test": "npm run lint && npm run jest",
     "start": "node-red -s sample/settings.js sample/flow.json -u sample/"
   },
   "version": "1.2.3"
