--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,9 @@
 language: node_js
 node_js:
   - 12
-
-install:
-  - npm install
-
-script:
-  - npm test
-
-notifications:
-  email:
-    recipients:
-      - lav@yoctu.com
-
-deploy:
-  provider: npm
-  email: "lav@yoctu.com"
-  api_key: $NPM_KEY
-  edge: true
-  on:
-    branch: master
+    
+import:
+    - source: flash-global/travis:js/common.yml@master
+      mode: deep_merge_prepend
+    - source: publish_npm.ymll@master
+      mode: deep_merge_prepend
