--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - 12
+
+before_script:
+- npm run start
     
 import:
     - source: flash-global/travis:js/common.yml@master
