--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 
 before_script:
 - npm install -g --unsafe-perm node-red
-- npm run start
+- npm run start &
     
 import:
     - source: flash-global/travis:js/common.yml@master
