--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 
 before_script:
 - npm install -g --unsafe-perm node-red
+- cd sample && npm install && cd ..
 - npm run start &
     
 import:
