Switch from deprecated standard eslint-plugin to a forked and maintained version

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint": "*",
     "eslint-config-standard": "*",
     "eslint-plugin-import": "*",
-    "eslint-plugin-node": "*",
+    "eslint-plugin-n": "*",
     "eslint-plugin-promise": "*",
     "eslint-plugin-standard": "*",
     "jest": "^27.4.7",
