try to fix travis deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
 
 before_deploy:
   - npm --no-git-tag-version --allow-same-version version $TRAVIS_TAG
+  - npm install -g npm@9
 
 deploy:
   - provider: npm
